Session 16/Exercise/Atsea Shop/k8s/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atsea-payment
  namespace: default
  annotations:
    description: "Internal service for payment gateway access"
spec:
  selector:
    app: atsea-payment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
