Session 16/Exercise/Atsea Shop/k8s/reverse-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atsea-reverse-proxy
  namespace: default
  annotations:
    description: "Reverse proxy service for internal access"
spec:
  selector:
    app: atsea-reverse-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
