Session 16/Exercise/Atsea Shop/k8s/visualizer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atsea-visualizer
  namespace: default
  annotations:
    description: "Internal and external access to visualizer through Ingress"
spec:
  selector:
    app: atsea-visualizer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 5000
  type: ClusterIP
